--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="row g-4 justify-content-center">
     <div class="col-md-3">
       <div class="card h-100">
-        <img src="c:\Users\User\Pictures\Saved Pictures\agustin-diaz-gargiulo-7F65HDP0-E0-unsplash.png"
+        <img 2 src="c:\Users\User\Pictures\Saved Pictures\agustin-diaz-gargiulo-7F65HDP0-E0-unsplash.png"
           class="card-img-top" alt="Viagem 1" />
         <div class="card-body">
           <h5 class="card-title">Rio de Janeiro</h5>
